--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mercado-liebre-larroulet",
   "version": "1.0.0",
   "description": "mercado liebre digital house",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "start" : "node app.js"
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/CaciqueLarru/mercadoliebre#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^3.1.6",
+    "express": "^4.17.2",
+    "multer": "^1.4.3",
+    "nodemon": "^2.0.15"
   }
 }
